use the 0.0.8 version of the javafx Maven plugin
and --enable-preview